# GIAIC-Q4-Hackathon-2_Phase-1

./: README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
history/prompts/001-in-memory-todo/: 1-in-memory-todo-app-spec.spec.prompt.md  2-in-memory-todo-plan.plan.prompt.md  3-in-memory-todo-tasks.tasks.prompt.md  4-in-memory-todo-implementation.green.prompt.md
history/prompts/constitution/: 1-update-todo-app-constitution.constitution.prompt.md
specs/001-in-memory-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-in-memory-todo/checklists/: requirements.md
specs/001-in-memory-todo/contracts/: todo-api-contract.md
src/: main.py  task_model.py  test_functionality.py  todo_manager.py
